update landing page

--- a/07_kiendv/Vinsofts/index.html
+++ b/07_kiendv/Vinsofts/index.html
@@ -9,13 +9,24 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="src/css/styles.css">
-    <title>Hello, world!</title>
+    <title>Vinsofts</title>
   </head>
   <body>
 	<div class="container">
+		
 		<header>
+			<div class="contact">
+				<span><i style="color: #00A9F0" class="fab fa-skype"></i> kiendo5695@gmail.com</span>
+				<span><i style="color: #ea2112" class="far fa-envelope"></i> kiendo5695@gmail.com</span>
+				<span><i style="color: #46e743" class="fas fa-phone"></i> 0123456789</span>
+			</div>
+			<div class="container">
 			<nav class="navbar fixed-top navbar-expand-lg navbar-light" data-toggle="sticky-onscroll">
-				<img class="navbar-brand" src="src/images/logo.png" alt="">
+				<div class="navbar-brand">
+					<div><img  src="src/images/logo.png" alt=""></div>
+					<div>Your success, Our pride!</div>
+
+				</div>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 				</button>
@@ -39,16 +50,16 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#">Recruiment</a>
 						</li>
-						<li class="nav-item fb">
+						<li class="nav-item desktop">
 							<a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a>
 						</li>
-						<li class="nav-item tw">
+						<li class="nav-item desktop">
 							<a class="nav-link" href="#"><i class="fab fa-twitter"></i></a>
 						</li>
-						<li class="nav-item ig">
+						<li class="nav-item desktop">
 							<a class="nav-link" href="#"><i class="fab fa-instagram"></i></a>
 						</li>
-						<li class="nav-item gg">
+						<li class="nav-item desktop">
 							<a class="nav-link" href="#"><i class="fab fa-google-plus-g"></i></a>
 						</li>
 						<li class="nav-item mobile">
@@ -60,6 +71,7 @@
 					</ul>
 				</div>
 			</nav>
+			</div>
 		</header>
 	</div>
 	<div class="bg-1">
