--- a/07_kiendv/Vinsofts/index.html
+++ b/07_kiendv/Vinsofts/index.html
@@ -24,13 +24,14 @@
 			<nav class="navbar fixed-top navbar-expand-lg navbar-light" data-toggle="sticky-onscroll">
 				<div class="navbar-brand">
 					<div><img  src="src/images/logo.png" alt=""></div>
-					<div>Your success, Our pride!</div>
-
+					<div>
+						<p>Your success, Our pride!</p>
+					</div>
 				</div>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<div class="collapse navbar-collapse" id="navbarNavDropdown" style="padding-top: 20px;">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item active">
 							<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
