--- a/06_trongnd/PDS/index2.html
+++ b/06_trongnd/PDS/index2.html
@@ -47,8 +47,8 @@
         <!-- end header -->
         <!-- slide -->
         <div class="w3-content w3-section slide">
-            <img class="mySlides" src="images/slide1.jpg" width="1000px" height="300px">
-            <img class="mySlides" src="images/silde2.jpg" width="1000px" height="300px">
+            <img class="mySlides" src="images/slide1.jpg" style="max-width: 1000px; height: auto;">
+            <img class="mySlides" src="images/silde2.jpg" style="max-width: 1000px; height: auto;">
             <div class="text-title">WEB DESIGN COMPANY REPUPATION</div>
             <div class="text-content">we've been brougth the most valued products and
                     servecies to our global clients during last 10 year</div>
