update demo scss - bootstrap

--- a/01_thangnv/demogiaodien(scss_bootstrap)/index.html
+++ b/01_thangnv/demogiaodien(scss_bootstrap)/index.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 
     <title>Demo giao diện web</title>
 </head>
@@ -30,6 +31,19 @@
                     You Success, our pride!</p>
             </div>
         </div>
+
+        <div class="mini-menu">
+            <button type="button" class="btn" data-toggle="collapse" data-target="#menu">Menu</button>
+            <div class="collapse" id="menu">
+                <a class="dropdown-item" href="#">Home</a>
+                <a class="dropdown-item" href="#">Protfolio</a>
+                <a class="dropdown-item" href="#">Services</a>
+                <a class="dropdown-item" href="#">Gallery</a>
+                <a class="dropdown-item" href="#">Contact</a>
+                <a class="dropdown-item" href="#">Recruiment</a>
+            </div>
+        </div>
+
         <div class="contact-menu">
             <div class="contact">
                 <ul>
@@ -103,7 +117,6 @@
                 </div>
             </div>
         </div>
-
     </header>
 
     <aside class="slide">
@@ -138,24 +151,25 @@
 
     <section>
 
-        <section class="out-services">
+        <section class="our-services">
             <h2>OUR SERVICES</h2>
             <div class="content-our-services">
-                <div class="mobile">
+                <div class="item-content-our-services">
                     <img src="img/mobile-app.jpg" alt="">
                     <h5>Mobile App Development</h5>
                     <p>We are experts in mobile development industry for years. We have a team with 10 skilled developers that
                         have been in this field for at least 5 years so far.</p>
                     <button class="btn btn-primary">Explore more >></button>
                 </div>
-                <div class="web">
+                <div class="item-content-our-services">
                     <img src="img/web-app.png" alt="">
                     <h5>Website Development</h5>
                     <p>We provide website development services. We are experts in below fields: WordPress development Magento
-                        development</p>
+                        development
+                    </p>
                     <button class="btn btn-primary">Explore more >></button>
                 </div>
-                <div class="custom">
+                <div class="item-content-our-services">
                     <img src="img/mobilyne.png" alt="">
                     <h5>Custom IT & Software Services</h5>
                     <p>We provide other IT and software services too.We have a team of experts in many fields of software development,coding
@@ -165,9 +179,99 @@
             </div>
         </section>
 
+        <section class="our-clients">
+            <h2>OUR CLIENTS</h2>
+            <div class="content-our-clients">
+                <div>
+                    <img src="img/oc-1.png" alt="Our Clients">
+                </div>
+                <div>
+                    <img src="img/oc-2.png" alt="Our Clients">
+                </div>
+                <div>
+                    <img src="img/oc-3.png" alt="Our Clients">
+                </div>
+                <div>
+                    <img src="img/oc-4.png" alt="Our Clients">
+                </div>
+                <div>
+                    <img src="img/oc-5.png" alt="Our Clients">
+                </div>
+            </div>
+        </section>
+
+        <section class="our-articles">
+            <h2>OUR ARTICLES</h2>
+            <div class="content-our-articles">
+                <div class="item-content-our-articles">
+                    <img src="img/oa-1.jpg" alt="">
+                    <h5>Vestibulum Ipsums Eros</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam ....</p>
+                </div>
+                <div class="item-content-our-articles">
+                    <img src="img/oa-2.jpg" alt="">
+                    <h5>Vestibulum Ipsums Eros</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam ....</p>
+                </div>
+                <div class="item-content-our-articles">
+                    <img src="img/oa-3.jpg" alt="">
+                    <h5>Mobile App Development</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam ....</p>
+                </div>
+            </div>
+        </section>
+
     </section>
 
     <footer>
+
+        <div class="item-footer">
+            <h4>ABOUT VINSOFTS</h4>
+            <img src="img/line.jpg" alt="line">
+            <div>
+                <p>Vinsofts Co., Ltd is software innovation and outsourcing company based in Hanoi, Vietnam. We provide top
+                    quality outsourcing services to global clients from USA to Australia, from Japan to EU countries.</p>
+            </div>
+        </div>
+        <div class="item-footer">
+            <h4>CONTACT US</h4>
+            <img src="img/line.jpg" alt="line">
+            <dir>
+                <form action="">
+                    <div class="form-group">
+                        <label>Name:</label>
+                        <div class="firstlastname">
+                            <input type="text" class="form-control" id="firstname" placeholder="First">
+                            <input type="text" class="form-control" id="lastname" placeholder="Last">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="comment">Comment</label>
+                        <textarea type="text" class="form-control" rows="3" id="comment"></textarea>
+                    </div>
+                    <button type="submit" class="btn">Submit</button>
+                </form>
+            </dir>
+        </div>
+        <div class="item-footer">
+            <h4>OUR INFO</h4>
+            <img src="img/line.jpg" alt="line">
+            <img class="map-info" src="img/our-info.jpg" alt="Vị trí Vinsofts">
+            <div>
+                <p>Ki ốt số 3 Nhà N9, Khu 212, Học Viện Kỹ Thuật Quân Sự, Đường Tân Xuân, Phường Xuân Đỉnh, Quận Bắc Từ Liêm,
+                    Hà Nội
+                </p>
+            </div>
+        </div>
+
+
         <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
