--- a/01_thangnv/demojs/index.html
+++ b/01_thangnv/demojs/index.html
@@ -10,10 +10,10 @@
 
 <body>
         
-    <!-- <script src="js1.js"></script> -->
     <script src="js2.js" defer></script>
     <script src="js3.js" async></script>
     <p id="p"></p>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 
 </body>
