--- a/01_thangnv/demojs/index.html
+++ b/01_thangnv/demojs/index.html
@@ -10,11 +10,10 @@
 
 <body>
         
-    <script src="js2.js" defer></script>
-    <script src="js3.js" async></script>
+    <script src="js2.js" async></script>
+    <script src="js3.js" defer></script>
+   <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script> -->
     <p id="p"></p>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 
 </body>
 
