--- a/05_tupa/cat-giao-dien/index.html
+++ b/05_tupa/cat-giao-dien/index.html
@@ -7,7 +7,7 @@
     <meta name="view-port" content="width= device-width">
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <title>Trang Chủ</title>
+    <title>Vinsofts</title>
 </head>
 <body>
     <!-- main -->
@@ -16,9 +16,10 @@
         <header>
             <!-- header left -->
             <div class="header-left">
-                <img src="images/logo.jpg" alt="vinsofts" width="94px;" height="54px;"><br/>
+                <img src="images/logo.jpg" title="vinsofts" alt="vinsofts" width="94px" height="54px"><br/>
                 <p>Your success, our pride!</p>
             </div>
+            <!-- end header left -->
             <!-- header-right -->
             <div class="header-right">
                 <div class="header-right-top">
@@ -45,6 +46,7 @@
                     </ul>
                 </div>
             </div>
+            <!-- end header-right -->
         </header>
         <!-- end header -->
         <!-- menu responsive -->
@@ -57,7 +59,6 @@
                 <option value="#">Contact</option>
                 <option value="#">Recruitment</option>
             </select>
-
         </nav>
         <!-- end menu -->
         <!-- slide -->
@@ -68,22 +69,6 @@
             <div class="text-content">we've been brougth the most valued products and
                     servecies to our global clients during last 10 year</div>
         </div>
-        <script>
-            var myIndex = 0;
-            carousel();
-                
-            function carousel() {
-                var i;
-                var x = document.getElementsByClassName("mySlides");
-                for (i = 0; i < x.length; i++) {
-                    x[i].style.display = "none";  
-                }
-                 myIndex++;
-                if (myIndex > x.length) {myIndex = 1}    
-                x[myIndex-1].style.display = "block";  
-                setTimeout(carousel, 1000); // Change image every 2 seconds
-            }
-        </script>
         <!-- end slide -->
         <!-- content -->
         <content>
@@ -175,7 +160,7 @@
         <footer>
             <div class="footer-about">
                 <p class="footer-about-title">ABOUT VINSOFTS</p>
-                <div class="line1" style="border:1px solid #404040; margin-bottom:20px;"></div>
+                <div class="line1"></div>
                 <p class="footer-about-desc">Vinsofts Co., Ltd is software
                     innovation and outsourcing
                     company based in Hanoi, Vietnam.
@@ -186,7 +171,7 @@
             </div>
             <div class="footer-contact">
                 <p class="footer-contact-title">CONTACT US</p>
-                <div class="line1" style="border:1px solid #404040; margin-bottom:20px; width:300px;"></div>
+                <div class="line1" style="width:300px;"></div>
                 <p>Name<span style="color:red">*</span></p>
                 <p><input type="text" style="width:100px;margin-right: 10px;">
                     <input type="text" style="width:190px">
@@ -199,11 +184,27 @@
             </div>
             <div class="footer-info">
                 <p class="footer-info-title">OUR INFO</p>
-                <div class="line1" style="border:1px solid #404040; margin-bottom:20px; width:300px;"></div>
+                <div class="line1" style="width:300px;"></div>
                 <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBynM-M9Wbv9_qEK3QwTRVcpuygF9Lttqo"></script><div style="overflow:hidden;height:250px;width:300px; color: black;"><div id="gmap_canvas" style="height:250px;width:300px;"><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.themecircle.net/wordpress-blog/" id="get-map-data">wordpress blog themes</a></div></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(21.040587,105.786849),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(21.040587, 105.786849)});infowindow = new google.maps.InfoWindow({content:"<b>Cty Vinsoft</b><br/><b>Địa chỉ:</b>Số 8 - Phan Văn Trường - Cầu Giấy<br/> " });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
                 <p>Số 8 Phan Văn Trường - Cầu Giấy - Hà Nội</p>
             </div>
         </footer>
+        <script>
+            var myIndex = 0;
+            carousel();
+                
+            function carousel() {
+                var i;
+                var x = document.getElementsByClassName("mySlides");
+                for (i = 0; i < x.length; i++) {
+                    x[i].style.display = "none";  
+                }
+                 myIndex++;
+                if (myIndex > x.length) {myIndex = 1}    
+                x[myIndex-1].style.display = "block";  
+                setTimeout(carousel, 1000); // Change image every 2 seconds
+            }
+        </script>
         <!-- end footer -->
     </main>
     <!-- end main -->
