--- a/05_tupa/demo-lazyload/index.html
+++ b/05_tupa/demo-lazyload/index.html
@@ -70,7 +70,7 @@
 		    $("img.ten-lop-ban-tu-dat").lazyload({
 		    	effect : "fadeIn",	//Hiệu ứng load hình ảnh
 		    	threshold: 100,		//Load trước số pixel chỉ định
-		    	event : "mouseover"	//Thực hiện load hình ảnh sự kiện
+		    	//event : "mouseleave"	//Thực hiện load hình ảnh sự kiện
 		    });
 		});
 	</script>
