--- a/06_trongnd/PDS/index2.html
+++ b/06_trongnd/PDS/index2.html
@@ -36,10 +36,10 @@
                         <li><a href="#">Recruitment</a></li>
                     </ul>
                     <ul class="icon">
-                            <li><a href="#"><img src="images/fb.jpg" alt=""></a></li>
-                            <li><a href="#"><img src="images/tw.jpg" alt=""></a></li>
-                            <li><a href="#"><img src="images/in.jpg" alt=""></a></li>
-                            <li><a href="#"><img src="images/g.jpg" alt=""></a></li>
+                            <li><a href="#"><img src="images/fb.jpg" alt="fb"></a></li>
+                            <li><a href="#"><img src="images/tw.jpg" alt="tw"></a></li>
+                            <li><a href="#"><img src="images/in.jpg" alt="yt"></a></li>
+                            <li><a href="#"><img src="images/g.jpg" alt="gg"></a></li>
                     </ul>
                 </nav>
             </div>
@@ -47,8 +47,8 @@
         <!-- end header -->
         <!-- slide -->
         <div class="w3-content w3-section slide">
-            <img class="mySlides" src="images/slide1.jpg" style="max-width: 1000px; height: auto;">
-            <img class="mySlides" src="images/silde2.jpg" style="max-width: 1000px; height: auto;">
+            <img class="mySlides" src="images/slide1.jpg" alt="slide" style="width: 1000px; height: auto;">
+            <img class="mySlides" src="images/silde2.jpg" alt="slide2" style="width: 1000px; height: auto;">
             <div class="text-title">WEB DESIGN COMPANY REPUPATION</div>
             <div class="text-content">we've been brougth the most valued products and
                     servecies to our global clients during last 10 year</div>
@@ -79,7 +79,7 @@
             <article class="box-main">
                     <ul>
                         <li>
-                            <div class="box-img"><img src="images/ipad.jpg" alt="" height="104px"></div>
+                            <div class="box-img"><img src="images/ipad.jpg" alt="top" height="104px"></div>
                             <div class="box-title">Mobile App Development</div>
                             <div class="box-desc">We are experts in mobile development
                                     industry for years. We have a team with 10
@@ -88,7 +88,7 @@
                             <div class="box-link"><span>Explore more >></span></div>
                         </li>
                         <li>
-                            <div class="box-img"><img src="images/pc.jpg" alt="" height="104px"></div>
+                            <div class="box-img"><img src="images/pc.jpg" alt="mid" height="104px"></div>
                             <div class="box-title">Mobile Development</div>
                             <div class="box-desc">We provide website development services.
                                     We are experts in below fields:
@@ -97,7 +97,7 @@
                             <div class="box-link"><span>Explore more >></span></div>
                         </li>
                             <li>
-                                <div class="box-img"><img src="images/m.jpg" alt="" height="104px"></div>
+                                <div class="box-img"><img src="images/m.jpg" alt="bott" height="104px"></div>
                                 <div class="box-title">Custom IT & Software Services</div>
                                 <div class="box-desc">We provide other IT and software services
                                         too.We have a team of experts in many fields
@@ -115,11 +115,11 @@
             </section>
             <article class="people">
                 <ul>
-                    <li><img src="images/people.jpg" alt=""></li>
-                    <li><img src="images/people2.jpg" alt=""></li>
-                    <li><img src="images/people3.jpg" alt=""></li>
-                    <li><img src="images/people4.jpg" alt=""></li>
-                    <li><img src="images/people5.jpg" alt=""></li>
+                    <li><img src="images/people.jpg" alt="T1"></li>
+                    <li><img src="images/people2.jpg" alt="T2"></li>
+                    <li><img src="images/people3.jpg" alt="T3"></li>
+                    <li><img src="images/people4.jpg" alt="T4"></li>
+                    <li><img src="images/people5.jpg" alt="T5"></li>
                 </ul>
             </article>
             <section class="title">
@@ -130,21 +130,21 @@
             <article class="product">
                 <ul>
                     <li>
-                        <div class="product-img"><img src="images/article1.jpg" alt=""></div>
+                        <div class="product-img"><img src="images/article1.jpg" alt="product1"></div>
                         <div class="product-title">Vestibulum Ipsums Eros</div>
                         <div class="product-desc">Lorem ipsum dolor sit amet, consectetur adipiscing
                                 elit, sed do eiusmod tempor incididunt ut labore et
                                 dolore magna aliqua. Ut enim ad minim veniam ....</div>
                     </li>
                     <li>
-                        <div class="product-img"><img src="images/article2.jpg" alt=""></div>
+                        <div class="product-img"><img src="images/article2.jpg" alt="product2"></div>
                         <div class="product-title">Vestibulum Ipsums Eros</div>
                         <div class="product-desc">Lorem ipsum dolor sit amet, consectetur adipiscing
                                     elit, sed do eiusmod tempor incididunt ut labore et
                                     dolore magna aliqua. Ut enim ad minim veniam ....</div>
                     </li>
                     <li>
-                        <div class="product-img"><img src="images/article3.jpg" alt=""></div>
+                        <div class="product-img"><img src="images/article3.jpg" alt="product3"></div>
                         <div class="product-title">Vestibulum Ipsums Eros</div>
                         <div class="product-desc">Lorem ipsum dolor sit amet, consectetur adipiscing
                                         elit, sed do eiusmod tempor incididunt ut labore et
