--- a/05_tupa/html5&css3/bem.html
+++ b/05_tupa/html5&css3/bem.html
@@ -56,7 +56,7 @@
 		/* Element */
 		.btn__text {
 		  padding: 0 10px;
-		  border-radius: 0 5px 5px 0;
+		  border-radius: 0px 5px 5px 0px;
 		}
 
 		/* Modifier */
