--- a/07_kiendv/Vinsofts/index.html
+++ b/07_kiendv/Vinsofts/index.html
@@ -23,7 +23,7 @@
 			<div class="container">
 			<nav class="navbar fixed-top navbar-expand-lg navbar-light" data-toggle="sticky-onscroll">
 				<div class="navbar-brand">
-					<div><img  src="src/images/logo.png" alt=""></div>
+					<div><img class="lazyload"  data-original="src/images/logo.png" alt=""></div>
 					<div>
 						<p>Your success, Our pride!</p>
 					</div>
@@ -86,7 +86,7 @@
 		<h1 class="text-center">OUR SERVICES</h1>
 		<div class="services row text-center">
 			<div class="col-sm-4">
-				<img src="src/images/service1.png" alt="">
+				<img class="lazyload" data-original="src/images/service1.png" alt="">
 				<article>
 					<h4>Mobile App Development</h4>
 					<p>We are experts in mobile development industry for years. We have a team with 10 skilled developers that have been in this field for at least 5 years so far.</p>
@@ -94,7 +94,7 @@
 				</article>
 			</div>
 			<div class="col-sm-4">
-				<img src="src/images/service2.png" alt="">
+				<img class="lazyload" data-original="src/images/service2.png" alt="">
 				<h4>Website Development</h4>
 				<p>We provide website development services. <br>
 				We are experts in below fields: <br>
@@ -103,7 +103,7 @@
 			<button class="btn btn-primary" type="">Explore more >></button>
 			</div>
 			<div class="col-sm-4">
-				<img src="src/images/service3.png" alt="">
+				<img class="lazyload" data-original="src/images/service3.png" alt="">
 				<h4>Custom IT & Website Services</h4>
 				<p>We provide other IT and software services too.We have a team of experts in many fields of software development,coding as well as IT related technologies.</p>
 				<button class="btn btn-primary" type="">Explore more >></button>
@@ -114,19 +114,19 @@
 		<h1 class="text-center">OUR CLIENTS</h1>
 		<div class="clients row text-center">
 			<div class="col">
-				<img src="src/images/client1.png" alt="">
+				<img class="lazyload" data-original="src/images/client1.png" alt="">
 			</div>
 			<div class="col">
-				<img src="src/images/client2.png" alt="">
+				<img class="lazyload" data-original="src/images/client2.png" alt="">
 			</div>
 			<div class="col">
-				<img src="src/images/client3.png" alt="">
+				<img class="lazyload" data-original="src/images/client3.png" alt="">
 			</div>
 			<div class="col client4">
-				<img src="src/images/client4.png" alt="">
+				<img class="lazyload" data-original="src/images/client4.png" alt="">
 			</div>
 			<div class="col client5">
-				<img src="src/images/client5.png" alt="">
+				<img class="lazyload" data-original="src/images/client5.png" alt="">
 			</div>
 		</div>
 	</section>
@@ -134,17 +134,17 @@
 		<h1 class="text-center">OUR ARTICLES</h1>
 		<div class="articles row text-center">
 			<div class="col-sm">
-				<img src="src/images/article1.png" alt="">
+				<img class="lazyload" data-original="src/images/article1.png" alt="">
 				<h4>Vestibulum Ipsums Eros</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam ....</p>
 			</div>
 			<div class="col-sm">
-				<img src="src/images/article2.png" alt="">
+				<img class="lazyload" data-original="src/images/article2.png" alt="">
 				<h4>Vestibulum Ipsums Eros</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam ....</p>
 			</div>
 			<div class="col-sm">
-				<img src="src/images/article3.png" alt="">
+				<img class="lazyload" data-original="src/images/article3.png" alt="">
 				<h4>Vestibulum Ipsums Eros</h4>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam ....</p>
 			</div>
@@ -155,6 +155,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="src/lazyload/jquery-1.11.3.min.js"></script>
+    <script src="src/lazyload/jquery.lazyload.min.js"></script>
     <script src="src/js/index.js"></script>
 	<footer>
 		<div class="container">
