--- a/04_datht/cat-web/index.html
+++ b/04_datht/cat-web/index.html
@@ -196,9 +196,11 @@
             </div>
             <div class="col-md-5 map">
                 
-                    <h4>OUR INFO</h4>
-                    <img src="asset/map.png" alt="">
-                    <div>Ki ốt số 3 Nhà N9,Khu 212,Học Viện Kĩ Thuật Quân Sự,Đường Tân Xuân,Phường Xuân Đỉnh, Quận Bắc Từ Liêm,Hà Nội</div>
+                <h4>OUR INFO</h4>
+                <div id="map" style="width:100%">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d930.9536719806252!2d105.78562978806224!3d21.04009955081291!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab34493f1719%3A0xcb0b2a50ed7cf561!2zQsOgaSBU4bqtcCAxMjMgTHV54buHbiBUaGkgVHLhuq9jIE5naGnhu4dtIE9ubGluZSBNaeG7hW4gUGjDrQ!5e0!3m2!1svi!2s!4v1533830107036" width="350" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
+                <div>Ki ốt số 3 Nhà N9,Khu 212,Học Viện Kĩ Thuật Quân Sự,Đường Tân Xuân,Phường Xuân Đỉnh, Quận Bắc Từ Liêm,Hà Nội</div>
             </div>
         <script>
             $(document).ready(function(){
