--- a/01_thangnv/demogiaodien/index.html
+++ b/01_thangnv/demogiaodien/index.html
@@ -5,46 +5,72 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+
+    <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <title>Document</title>
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/style.min.css">
+
+
+    <title>Demo giao diện web</title>
 </head>
 
 <body>
-    <header id="header-page">
-        <div class="logo">
-            <img src="img/logo.png" alt="Logo">
-            <p style="font-size: 9.86px;font-family: Roboto;">You Success, our pride!</p>
+
+    <header class="header-page">
+        <div class="logo-slogan">
+            <div class="logo">
+                <img src="img/logo.png" alt="Logo Vinsofts">
+            </div>
+            <div class="slogan">
+                <p>
+                    You Success, our pride!</p>
+            </div>
         </div>
+
         <div class="mini-menu">
-            <select>
-                <option value=""><a href="">Home</a></option>
-                <option value="">Protfolio</option>
-                <option value="">Services</option>
-                <option value="">Gallery</option>
-                <option value="">Contact</option>
-                <option value="">Recruiment</option>
-            </select>
+            <button type="button" class="btn" data-toggle="collapse" data-target="#menu">Menu</button>
+            <div class="collapse" id="menu">
+                <a class="dropdown-item" href="#">Home</a>
+                <a class="dropdown-item" href="#">Protfolio</a>
+                <a class="dropdown-item" href="#">Services</a>
+                <a class="dropdown-item" href="#">Gallery</a>
+                <a class="dropdown-item" href="#">Contact</a>
+                <a class="dropdown-item" href="#">Recruiment</a>
+            </div>
         </div>
-        <div class="menu-contact">
-            <dir class="contact">
+
+        <div class="contact-menu">
+            <div class="contact">
                 <ul>
+
                     <li>
-                        <img src="img/icon-sk.png" alt="Skype"> Skype:
-                        <a href="">Vinsofts.com</a>
+                        <p>
+                            <img src="img/icon-sk.png" alt="Skype Vinsofts">Skype:
+                            <a href="">Vinsofts.com</a>
+                        </p>
                     </li>
                     <li>
-                        <img src="img/icon-gm.png" alt="Gmail">Gmail:
-                        <a href="">Contact@vinsofts.com</a>
+                        <p>
+                            <img src="img/icon-gm.png" alt="Skype Vinsofts">Gmail:
+                            <a href="">Contact@vinsofts.com</a>
+                        </p>
                     </li>
                     <li>
-                        <img src="img/icon-ct.png" alt="Contact"> Contact:
-                        <a href="">0988 988 988</a>
+                        <p>
+                            <img src="img/icon-ct.png" alt="Skype Vinsofts">Contact:
+                            <a href="">0988 988 988</a>
+                        </p>
                     </li>
                 </ul>
-            </dir>
+            </div>
             <div class="menu">
-                <nav>
+                <div class="left-menu">
                     <ul>
                         <li>
                             <a href="">Home</a>
@@ -65,27 +91,27 @@
                             <a href="">Recruiment</a>
                         </li>
                     </ul>
-                </nav>
-                <div class="mxh">
+                </div>
+                <div class="right-menu">
                     <ul>
                         <li>
                             <a href="">
-                                <img src="img/icon-fb.png" alt=" ">
+                                <img src="img/icon-fb.png" alt="Facebok Vinsofts">
                             </a>
                         </li>
                         <li>
-                            <a href=" ">
-                                <img src="img/icon-tw.png " " " alt=" ">
+                            <a href="">
+                                <img src="img/icon-tw.png" alt="Facebok Vinsofts">
                             </a>
                         </li>
                         <li>
-                            <a href=" ">
-                                <img src="img/icon-ln.png " " " alt=" ">
+                            <a href="">
+                                <img src="img/icon-ln.png" alt="Facebok Vinsofts">
                             </a>
                         </li>
                         <li>
-                            <a href=" ">
-                                <img src="img/icon-gg.png " " " alt=" ">
+                            <a href="">
+                                <img src="img/icon-gg.png" alt="Facebok Vinsofts">
                             </a>
                         </li>
                     </ul>
@@ -94,183 +120,167 @@
         </div>
     </header>
 
-    <section>
-        <!-- slide -->
-        <aside class="slide">
-            <img src="img/slide1.jpg" alt="">
-        </aside>
+    <aside class="slide">
+        <div id="demo" class="carousel slide" data-ride="carousel">
 
-        <!-- our-services -->
-        <section class="our-services">
-            <div class="header-our-services">
-                <h1>OUR SERVICES</h1>
+            <!-- Indicators -->
+            <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+            </ul>
+
+            <!-- The slideshow -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/slide1.jpg" alt="Slide1">
+                </div>
+                <div class="carousel-item">
+                    <img src="img/slide2.jpg" alt="Slide2">
+                </div>
             </div>
-            <div class="content-out-services">
-                <div class="col-content-out-services">
-                    <div>
-                        <img src="img/mobile-app.jpg" alt="">
-                    </div>
-                    <div>
-                        <h3>Mobile App Development</h3>
-                    </div>
-                    <div>
-                        <p>We are experts in mobile development industry for years. We have a team with 10 skilled developers
-                            that have been in this field for at least 5 years so far.</p>
-                    </div>
-                    <div>
-                        <a href=""></a>
-                    </div>
+
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+
+        </div>
+    </aside>
+
+    <section>
+
+        <section class="our-services">
+            <h2>OUR SERVICES</h2>
+            <div class="content-our-services">
+                <div class="item-content-our-services">
+                    <img src="img/mobile-app.jpg" alt="">
+                    <h5>Mobile App Development</h5>
+                    <p>We are experts in mobile development industry for years. We have a team with 10 skilled developers that
+                        have been in this field for at least 5 years so far.</p>
+                    <button class="btn btn-primary">Explore more >></button>
                 </div>
-                <div class="col-content-out-services">
-                    <div>
-                        <img src="img/web-app.png" alt="">
-                    </div>
-                    <div>
-                        <h3>Website Development</h3>
-                    </div>
-                    <div>
-                        <p>We provide website development services. We are experts in below fields: WordPress development Magento
-                            development
-                        </p>
-                    </div>
-                    <div>
-                        <a href=""></a>
-                    </div>
+                <div class="item-content-our-services">
+                    <img src="img/web-app.png" alt="">
+                    <h5>Website Development</h5>
+                    <p>We provide website development services. We are experts in below fields: WordPress development Magento
+                        development
+                    </p>
+                    <button class="btn btn-primary">Explore more >></button>
                 </div>
-                <div class="col-content-out-services">
-                    <div>
-                        <img src="img/mobillyne.jpg" alt="">
-                    </div>
-                    <div>
-                        <h3>Custom IT & Software Services</h3>
-                    </div>
-                    <div>
-                        <p>We provide other IT and software services too.We have a team of experts in many fields of software
-                            development,coding as well as IT related technologies.</p>
-                    </div>
-                    <div>
-                        <a href=""></a>
-                    </div>
+                <div class="item-content-our-services">
+                    <img src="img/mobilyne.png" alt="">
+                    <h5>Custom IT & Software Services</h5>
+                    <p>We provide other IT and software services too.We have a team of experts in many fields of software development,coding
+                        as well as IT related technologies.</p>
+                    <button class="btn btn-primary">Explore more >></button>
                 </div>
             </div>
         </section>
-        <!-- our-clients -->
 
         <section class="our-clients">
-            <div class="header-our-clients">
-                <h1>OUR CLIENTS</h1>
-            </div>
-            <div class="content-out-clients">
-                <div class="col-content-out-clients">
-                    <img src="img/oc-1.png" alt="">
+            <h2>OUR CLIENTS</h2>
+            <div class="content-our-clients">
+                <div>
+                    <img src="img/oc-1.png" alt="Our Clients">
                 </div>
-                <div class="col-content-out-clients">
-                    <img src="img/oc-2.png" alt="">
+                <div>
+                    <img src="img/oc-2.png" alt="Our Clients">
                 </div>
-                <div class="col-content-out-clients">
-                    <img src="img/oc-3.png" alt="">
+                <div>
+                    <img src="img/oc-3.png" alt="Our Clients">
                 </div>
-                <div class="col-content-out-clients">
-                    <img src="img/oc-4.png" alt="">
+                <div>
+                    <img src="img/oc-4.png" alt="Our Clients">
                 </div>
-                <div class="col-content-out-clients">
-                    <img src="img/oc-5.png" alt="">
+                <div>
+                    <img src="img/oc-5.png" alt="Our Clients">
                 </div>
             </div>
         </section>
 
-        <!-- out-articles -->
         <section class="our-articles">
-            <div class="header-our-articles">
-                <h1>OUR ARTICLES</h1>
-            </div>
-            <div class="content-out-articles">
-                <div class="col-content-out-articles">
-                    <div>
-                        <img src="img/oa-1.jpg" alt="">
-                    </div>
-                    <div>
-                        <h3>Mobile App Development</h3>
-                    </div>
-                    <div>
-                        <p>We are experts in mobile development industry for years. We have a team with 10 skilled developers
-                            that have been in this field for at least 5 years so far.</p>
-                    </div>
-                    <div>
-                        <a href=""></a>
-                    </div>
+            <h2>OUR ARTICLES</h2>
+            <div class="content-our-articles">
+                <div class="item-content-our-articles">
+                    <img src="img/oa-1.jpg" alt="">
+                    <h5>Vestibulum Ipsums Eros</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam ....</p>
                 </div>
-                <div class="col-content-out-articles">
-                    <div>
-                        <img src="img/oa-2.jpg" alt="">
-                    </div>
-                    <div>
-                        <h3>Website Development</h3>
-                    </div>
-                    <div>
-                        <p>We provide website development articles. We are experts in below fields: WordPress development Magento
-                            development
-                        </p>
-                    </div>
-                    <div>
-                        <a href=""></a>
-                    </div>
+                <div class="item-content-our-articles">
+                    <img src="img/oa-2.jpg" alt="">
+                    <h5>Vestibulum Ipsums Eros</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam ....</p>
                 </div>
-                <div class="col-content-out-articles">
-                    <div>
-                        <img src="img/oa-3.jpg" alt="">
-                    </div>
-                    <div>
-                        <h3>Custom IT & Software articles</h3>
-                    </div>
-                    <div>
-                        <p>We provide other IT and software articles too.We have a team of experts in many fields of software
-                            development,coding as well as IT related technologies.</p>
-                    </div>
-                    <div>
-                        <a href=""></a>
-                    </div>
+                <div class="item-content-our-articles">
+                    <img src="img/oa-3.jpg" alt="">
+                    <h5>Mobile App Development</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                        dolore magna aliqua. Ut enim ad minim veniam ....</p>
                 </div>
             </div>
         </section>
+
     </section>
+
     <footer>
-        <div class="about-vinsofts">
-            <h2>ABOUT VINSOFTS</h2>
-            <img src="img/line.jpg" style="width: 100%; height: 3px;" alt="">
-            <p>Vinsofts Co., Ltd is software innovation and outsourcing company based in Hanoi, Vietnam. We provide top quality
-                outsourcing services to global clients from USA to Australia, from Japan to EU countries.</p>
-        </div>
-        <div class="contact-us">
-            <h2>CONTACT US</h2>
-            <img src="img/line.jpg" style="width: 100%; height: 3px;" alt="">
+
+        <div class="item-footer">
+            <h4>ABOUT VINSOFTS</h4>
+            <img src="img/line.jpg" alt="line">
             <div>
-                <div>
-                    <h5>Name</h5>
-                    <div style="display: flex;">
-                        <input type="text" style="width: 40%;">
-                        <input type="text" style="width: 60%;margin-left: 5px;">
-                    </div>
-                </div>
-                <div>
-                    <h5>Email</h5>
-                    <input type="email">
-                </div>
-                <div>
-                    <h5>Comment</h5>
-                    <input type="text" style="height: 100px;">
-                </div>
-                <input type="submit" value="Submit" style="width:80px;">
+                <p>Vinsofts Co., Ltd is software innovation and outsourcing company based in Hanoi, Vietnam. We provide top
+                    quality outsourcing services to global clients from USA to Australia, from Japan to EU countries.</p>
             </div>
         </div>
-        <div class="our-info">
-            <h2>OUR-INFO</h2>
-            <img src="img/line.jpg" style="width: 100%; height: 3px;" alt="">
-            <img src="img/our-info.jpg" style="width: 100%;" alt="Info">
-            <p>Ki ốt số 3 Nhà N9, Khu 212, Học Viện Kỹ Thuật Quân Sự, Đường Tân Xuân, Phường Xuân Đỉnh, Quận Bắc Từ Liêm, Hà
-                Nội
-            </p>
+        <div class="item-footer">
+            <h4>CONTACT US</h4>
+            <img src="img/line.jpg" alt="line">
+            <dir>
+                <form action="">
+                    <div class="form-group">
+                        <label>Name:</label>
+                        <div class="firstlastname">
+                            <input type="text" class="form-control" id="firstname" placeholder="First">
+                            <input type="text" class="form-control" id="lastname" placeholder="Last">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email</label>
+                        <input type="email" class="form-control" id="email">
+                    </div>
+                    <div class="form-group">
+                        <label for="comment">Comment</label>
+                        <textarea type="text" class="form-control" rows="3" id="comment"></textarea>
+                    </div>
+                    <button type="submit" class="btn">Submit</button>
+                </form>
+            </dir>
         </div>
+        <div class="item-footer">
+            <h4>OUR INFO</h4>
+            <img src="img/line.jpg" alt="line">
+            <img class="map-info" src="img/our-info.jpg" alt="Vị trí Vinsofts">
+            <div>
+                <p>Ki ốt số 3 Nhà N9, Khu 212, Học Viện Kỹ Thuật Quân Sự, Đường Tân Xuân, Phường Xuân Đỉnh, Quận Bắc Từ Liêm,
+                    Hà Nội
+                </p>
+            </div>
+        </div>
+
+
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+        <!-- Popper JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+
+        <!-- Latest compiled JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     </footer>
 </body>
 
